# iris-classifier

./: .flake8  README.md  pyproject.toml
src/: main.py
src/iris_classifier/: abstracts.py  classifiers.py  data_readers.py  distances.py  exceptions.py  hyperparameters.py  models.py  partitions.py  samples.py  schemas.py  training.py
src/iris_classifier/models/: __init__.py  hyperparameters.py  samples.py
tests/: __init__.py  conftest.py  test_data_readers.py  test_hyperparameters.py  test_models.py  test_partitions.py  test_samples.py  test_training.py
tests/mock_data/: __init__.py  training_data.py
