[tool.poetry]
name = "iris-classifier"
version = "0.1.0"
description = ""
authors = ["Juan Bernardo Benavides Rubio <juan.benavides@fintegra.co>"]
readme = "README.md"
packages = [{include = "iris_classifier", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
black = "^22.12.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
