[tool.poetry]
name = "iris-classifier"
version = "0.1.0"
description = ""
authors = ["Juan Bernardo Benavides Rubio <juan.benavides@fintegra.co>"]
readme = "README.md"
packages = [{include = "iris_classifier", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
jsonschema = "^4.17.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"
types-jsonschema = "^4.17.0.2"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
